--- a/main.html
+++ b/main.html
@@ -8,6 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+            <thead>
+            <tr id="rollnumber">
+                Roll Numbers
+            </tr>
+            <tr id="name"> Names</tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>21</td>
+                    <td>sam</td>
+                </tr>
+                <tr>
+                    <td>21</td>
+                    <td>sam</td>
+                </tr>
+                <tr>
+                    <td>21</td>
+                    <td>sam</td>
+                </tr>
+            </tbody>
+        </table>
+        <ol>List of medias
+            <li><img src="https://picsum.photos/id/123/200/300" alt="img"></li>
+            <li>
+                <video>
+                    <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+                </video>
+            </li>
+            <li>
+                <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"></audio>
+            </li>
+        </ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
