--- a/main.html
+++ b/main.html
@@ -8,29 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table>
+	 <h1>Semantic Tables and Media</h1>
+        <table>
             <thead>
-            <tr id="rollnumber">
+           
+            <th id="name"> Names</th>
+            <th id="rollnumber">
                 Roll Numbers
-            </tr>
-            <tr id="name"> Names</tr>
+            </th>
             </thead>
             <tbody>
                 <tr>
-                    <td>21</td>
-                    <td>sam</td>
+                    <td>Amit</td>
+                    <td>19355</td>
                 </tr>
                 <tr>
-                    <td>21</td>
-                    <td>sam</td>
+                    <td>Amit</td>
+                    <td>19356</td>
                 </tr>
                 <tr>
-                    <td>21</td>
-                    <td>sam</td>
+                    <td>Santosh</td>
+                    <td>19357</td>
                 </tr>
             </tbody>
         </table>
-        <ol>List of medias
+        <h2>List of medias</h2>
+        <ol>
             <li><img src="https://picsum.photos/id/123/200/300" alt="img"></li>
             <li>
                 <video>
