--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
                 </video>
             </li>
             <li>
-                <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"></audio>
+                <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" controls></audio>
             </li>
         </ol>
     <script type="text/javascript" src="./script.js">
